# Pulse

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
src/: formatters.rs  main.rs
