[package]
name = "pulse"
description = "A lightweight terminal process monitor (htop alternative)"
repository = "https://github.com/Saksham1387/Pulse"
license = "MIT"
keywords = ["htop", "process-monitor", "tui", "system", "cli"]
categories = ["command-line-utilities"]
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.30.1"
sysinfo = "0.38.4"

[[bin]]
name = "pulse"
path = "src/main.rs"